# touch-detection

./: .clang-format  .clang-tidy  .clangd  .gitignore  .ruff.toml  Dockerfile  README.md  TD_experiment.sh  TD_experiment_v1.md  dependencies.repos  docker-compose.yml
linear_velocity_controller/: CMakeLists.txt  README.md  linear_velocity_controller.xml  package.xml
linear_velocity_controller/config/: controller_manager.yaml  joint_state_broadcaster.yaml  linear_velocity_controller.yaml
linear_velocity_controller/include/linear_velocity_controller/: generate_trajectory.hpp  linear_trajectory_generator.hpp  linear_velocity_controller.hpp
linear_velocity_controller/launch/: bringup_linear_velocity_controller.launch.py  controller_manager.launch.py  linear_velocity_controller.launch.py  robot_description.launch.py
linear_velocity_controller/src/: linear_velocity_controller.cpp
linear_velocity_controller/test/: test_load_linear_velocity_controller.cpp
linear_velocity_controller_interfaces/: CMakeLists.txt  package.xml
linear_velocity_controller_interfaces/msg/: ConstrainedLinearMovement.msg
notebooks/: td_alignment.ipynb  td_process_clock_bounce.ipynb
recording/: Dockerfile  dependencies.repos  docker-compose.yml
touch_detection_bringup/: CMakeLists.txt  package.xml
touch_detection_bringup/config/: bwd_linear_velocity_controller.yaml  fwd_linear_velocity_controller.yaml
touch_detection_bringup/launch/: bringup.launch.py  plotjuggler.launch.py  rviz.launch.py
touch_detection_bringup/plotjuggler/: touch_detection.xml
touch_detection_bringup/rviz2/: touch_detection.rviz
