<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>linear_velocity_controller</name>
  <version>0.0.0</version>
  <description>Move the robot in a linear direction</description>

  <maintainer email="j.j.hierck@student.utwente.nl">Jelle Hierck</maintainer>
  <author email="j.j.hierck@student.utwente.nl">Jelle Hierck</author>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS built-in dependencies -->
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <!-- Third-party ROS dependencies -->
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>realtime_tools</depend>
  <depend>pluginlib</depend>
  <depend>franka_semantic_components</depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>franka_description</exec_depend>

  <!-- First-party ROS dependencies -->
  <depend>linear_velocity_controller_interfaces</depend>

  <!-- Other dependencies -->

  <!-- Test dependencies -->
  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>controller_manager</test_depend>
  <test_depend>hardware_interface</test_depend>
  <test_depend>ros2_control_test_assets</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
