<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>touch_detection_bringup</name>
  <version>0.0.0</version>
  <description>Launch files for the Touch Detection experiment</description>
  <maintainer email="j.j.hierck@student.utwente.nl">Jelle Hierck</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS built-in dependencies -->
  <exec_depend>ros2launch</exec_depend>

  <!-- Third-party ROS dependencies -->
  <exec_depend>franka_bringup</exec_depend>

  <!-- First-party ROS dependencies -->
  <exec_depend>linear_velocity_controller</exec_depend>

  <!-- Other dependencies -->
  <exec_depend>plotjuggler</exec_depend>

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
